[package]
name = "cfd"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "=0.29.0"
libc = "0.2"
nix = { version = "0.29.0", features = ["signal"] }
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
shellexpand = "3.1.0"
